--- a/eBook/15.7.md
+++ b/eBook/15.7.md
@@ -3,7 +3,7 @@
 （template 包的文档可以在 [https://golang.org/pkg/text/template/](https://golang.org/pkg/text/template/) 找到。）
 
 在前一章节，我们使用 template 对象把数据结构整合到 HTML 模板中。这项技术确实对网页应用程序非常有用，然而模板是一项更为通用的技术方案：数据驱动的模板被创建出来，以生成文本输出。HTML 仅是其中的一种特定使用案例。
-
+::: v-pre   
 模板通过与数据结构的整合来生成，通常为结构体或其切片。当数据项传递给 `tmpl.Execute()` ，它用其中的元素进行替换， 动态地重写某一小段文本。**只有被导出的数据项**才可以被整合进模板中。可以在 `{{` 和 `}}` 中加入数据求值或控制结构。数据项可以是值或指针，接口隐藏了他们的差异。
 
 ## 15.7.1 字段替换：`{{.FieldName}}`
@@ -277,6 +277,7 @@ func main() {
 输出 `hello Mary!`。
 
 预定义函数也在 [15.6节](15.6.md) 中使用：`{{ printf "%s" .Body|html}}`，否则字节切片 `Body` 会作为数字序列打印出来。
+::: 
 
 ## 链接
 
