--- a/eBook/18.9.md
+++ b/eBook/18.9.md
@@ -9,9 +9,9 @@ var strTempl = template.Must(template.New("TName").Parse(strTemplateHTML))
 ```
 
 在网页应用中使用HTML过滤器过滤HTML特殊字符：
-    
+::: v-pre    
 `{{html .}}` 或者通过一个字段 `FieldName {{ .FieldName |html }}`
-
+:::
 使用缓存模板（参考[章节15.7](15.7.md)） 
 
 ## 链接
