--- a/eBook/15.6.md
+++ b/eBook/15.6.md
@@ -126,13 +126,14 @@ func load(title string) (*Page, error) {
   `makeHandler` 会用它对请求管控。
 - 必须有一种机制把 `Page` 结构体数据插入到网页的标题和内容中，可以利用 `template` 包通过如下步骤完成：
 	1. 先在文本编辑器中创建 html 模板文件，例如 view.html：
+::: v-pre
 	```html
 	<h1>{{.Title |html}}</h1>
 	<p>[<a href="/edit/{{.Title |html}}">edit</a>]</p>
 	<div>{{printf "%s" .Body |html}}</div>
 	```
 	把要插入的数据结构字段放在 `{{` 和 `}}` 之间，这里是把 `Page` 结构体数据 `{{.Title |html}}` 和 `{{printf "%s" .Body |html}}` 插入页面（当然可以是非常复杂的 html，但这里尽可能地简化了，以突出模板的原理。）（`{{.Title |html}}` 和 `{{printf "%s" .Body |html}}` 语法说明详见后续章节）。
-
+:::
 	2. `template.Must(template.ParseFiles(tmpl + ".html"))` 把模板文件转换为 `*template.Template` 类型的对象，为了高效，在程序运行时仅做一次解析，在 `init()` 函数中处理可以方便地达到目的。所有模板对象都被保持在内存中，存放在以 html 文件名作为索引的 map 中：
 	```go
 	templates = make(map[string]*template.Template)
@@ -165,7 +166,7 @@ func makeHandler(fn func(http.ResponseWriter, *http.Request, string)) http.Handl
   另外，该值和表示没有 error 的 nil 值一起返回给调用者。然后在 `renderTemplate` 中将该结构体与模板对象整合。
 
   万一发生错误，也就是说 wiki 页面在磁盘上不存在，错误会被返回给 `viewHandler`，此时会自动重定向，跳转请求对应标题的编辑页面。
-
+::: v-pre
 - `editHandler` 基本上也差不多：尝试读取文件，如果存在则用“编辑”模板来渲染；万一发生错误，创建一个新的包含指定标题的 `Page` 对象并渲染。
 - 当在编辑页面点击“保存”按钮时，触发保存页面内容的动作。按钮须放在 html 表单中，它开头是这样的：
   ```html
@@ -173,6 +174,7 @@ func makeHandler(fn func(http.ResponseWriter, *http.Request, string)) http.Handl
   ```
   
   这意味着，当提交表单到类似 `http://localhost/save/{Title}` 这样的 URL 格式时，一个 POST 请求被发往网页服务器。针对这样的 URL 我们已经定义好了处理函数：`saveHandler()`。在 request 对象上调用 `FormValue()` 方法，可以提取名称为 body 的文本域内容，用这些信息构造一个 `Page` 对象，然后尝试通过调用 `save()` 方法保存其内容。万一运行失败，执行 `http.Error` 以将错误显示到浏览器。如果保存成功，重定向浏览器到该页的阅读页面。`save()` 函数非常简单，利用 `ioutil.WriteFile()`，写入 `Page` 结构体的 `Body` 字段到文件 `filename` 中，之后会被用于模板替换占位符 `{{printf "%s" .Body |html}}`。
+:::
 
 ## 链接
 
